fix(admin,frontend): layout issues (#91)

--- a/admin/src/assets/css/booking-status.css
+++ b/admin/src/assets/css/booking-status.css
@@ -60,9 +60,9 @@ div.booking-status .bs-icon-paid {
   color: #77BC23;
 }
 
-div.booking-status span.bs-paidinfull{
-  background: #D1F9D1;
-  color: #77BC23;
+div.booking-status span.bs-paidinfull {
+  background: #77BC23;
+  color: #FFF;
 }
 
 div.booking-status .bs-icon-paidinfull {
